# MossTTSNanoDesktop

./: .gitignore  DEV_SETUP.md  FIX_NOTES.md  README.md  README_API.md  README_FLUTTER.md  README_zh.md  analysis_options.yaml  app.py  pixi.toml  pubspec.yaml  pyproject.toml  test.txt  test_api.ps1
android/app/: build.gradle.kts
assets/: random_values.json
assets/audio/: 4401395053b2.0  voices.json
assets/i18n/: en.json  zh.json
assets/web/: index.html
desktop/: README.md
desktop/electron/: app.js  index.html  main.js  package-lock.json  package.json  preload.js  server.js  style.css  voices.js
desktop/scripts/: build-server.sh  build-win.bat
finetuning/: README_zh.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_localizations.dart
lib/models/: app_settings.dart  book_project.dart  generation_params.dart  text_rule.dart  tts_config.dart  voice.dart
lib/pages/: book_page.dart  settings_page.dart  single_page.dart  theme.dart  voices_page.dart
lib/providers/: app_providers.dart  theme_provider.dart
lib/services/: app_state.dart  audio_codec.dart  (+15 more)
linux/: CMakeLists.txt
old_electorn_python/: convert_audio.py  pyproject.toml
old_electorn_python/assets/audio/: voices.json
old_electorn_python/desktop/electron/: version.json
old_electorn_python/desktop/scripts/: build-linux.sh  build-mac.sh  build-server.sh
old_electorn_python/finetuning/: README.md  run_train.sh
old_electorn_python/src/: app.py  onnx_tts_runtime.py  text_normalization_pipeline.py
old_electorn_python/src/moss_tts_server/: __init__.py  defaults.py  managers.py  models.py  onnx_adapter.py
old_electorn_python/src/moss_tts_server/routes/: generate.py
src/: audio_list.json  temp.html  temp.py  temp1.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+55 files in other folders)
