[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moss-tts-nano"
version = "0.1.0"
description = "Open-source realtime multilingual tiny TTS from OpenMOSS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenMOSS Team" },
]
dependencies = []


[project.urls]
Homepage = "https://github.com/OpenMOSS/MOSS-TTS-Nano"
Repository = "https://github.com/OpenMOSS/MOSS-TTS-Nano"
Documentation = "https://studio.mosi.cn/docs/moss-tts-nano"

[project.scripts]
moss-tts-nano = "moss_tts_nano.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["moss_tts_nano", "moss_tts_server"]
py-modules = [
  "app",
  "infer",
  "infer_onnx",
  "moss_tts_nano_runtime",
  "onnx_tts_runtime",
  "ort_cpu_runtime",
  "text_normalization_pipeline",
  "tts_robust_normalizer_single_script",
]
